log
Thu 24 Aug 2023 08:17:08 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:34:6: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘return’
   34 |      return list;
      |      ^~~~~~
list.c:34:13: error: ‘list’ undeclared (first use in this function); did you mean ‘List’?
   34 |      return list;
      |             ^~~~
      |             List
list.c:34:13: note: each undeclared identifier is reported only once for each function it appears in
list.c:35:1: error: control reaches end of non-void function [-Werror=return-type]
   35 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
635e0c8
Thu 24 Aug 2023 08:25:03 PM UTC: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:36:12: error: incompatible types when returning type ‘List’ {aka ‘struct List’} but ‘List *’ {aka ‘struct List *’} was expected
   36 |     return list;
      |            ^~~~
list.c:37:1: error: control reaches end of non-void function [-Werror=return-type]
   37 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
f9b6def
